# wiimote

./: COPYING  Cargo.toml  readme.md
examples/: events.rs  ir.rs  leds.rs  reset.rs  rumble.rs  speaker.rs
src/: consts.rs  lib.rs  main.rs  read.rs  write.rs
